@startuml

title __WEBSOCKETS's Class Diagram__\n

  package websockets {
    class HttpHandshakeInterceptor {
        + beforeHandshake()
        + afterHandshake()
    }
  }
  

  package websockets {
    class Message {
        {static} + TYPE_FILE : String
        {static} + TYPE_LOGIN : String
        {static} + TYPE_LOGIN_ACK : String
        {static} + TYPE_TEXT : String
        {static} + TYPE_USERS : String
        {static} + TYPE_CREATE_ROOM : String
        {static} + TYPE_REQUEST_MESSAGES : String
        {static} + TYPE_SYSTEM_MESSAGE : String
        - type : String
        - from : String
        - to : String
        - content : Object
        - timestamp : Date
        + Message()
        + toString()
        + getType()
        + getFrom()
        + getTo()
        + getContent()
        + getTimestamp()
        + setType()
        + setFrom()
        + setTo()
        + setContent()
        + setTimestamp()
    }
  }
  

  package websockets {
    class MessagingController {
        {static} - logger : Logger
        {static} - FROM_SYSTEM : String
        ~ template : SimpMessagingTemplate
        - rabbitTemplate : RabbitTemplate
        + addMessageToRoom()
        - manageLogin()
        + receive()
        + send()
        + sendMessageFile()
        + sendToFanoutBroker()
        + addRoomToUsers()
        - notifyNewRoom()
    }
  }
  

  package websockets {
    class WebSocketConfig {
        + configureMessageBroker()
        + registerStompEndpoints()
        + configureClientInboundChannel()
        # createAuthentication()
    }
  }
  

  HttpHandshakeInterceptor -up-|> HandshakeInterceptor
  Message -up-|> Serializable
  MessagingController o-- UserRepository : usersRepository
  MessagingController o-- RoomRepository : roomsRepository
  WebSocketConfig -up-|> WebSocketMessageBrokerConfigurer
  WebSocketConfig o-- UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
